update(ignore twitter1 notebook)

--- a/fifa_twitter(Luke).ipynb
+++ b/fifa_twitter(Luke).ipynb
@@ -562,7 +562,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "we could run this test on a specific twitter handle or hashtag. (How have people tweeted about the top players in the league over time?)"
+   ]
   }
  ],
  "metadata": {
