--- a/fifa_twitter3(Luke).ipynb
+++ b/fifa_twitter3(Luke).ipynb
@@ -521,7 +521,6 @@
     }
    ],
    "source": [
-    "#https://www.kaggle.com/fatyma/sentiment-analysis-of-tweets\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "from nltk.sentiment.util import *\n",
     "\n",
@@ -604,11 +603,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#we could run this test on a specific twitter handle or hashtag. (How have people tweeted about the top players in the league over time?)"
+   ]
   },
   {
    "cell_type": "code",
