--- a/Capstone(hist dataset)(Luke notebook).ipynb
+++ b/Capstone(hist dataset)(Luke notebook).ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4  Scotland    False  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "Name: tournament, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "4  Scotland    False  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -408,103 +408,103 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8703</th>\n",
-       "      <td>1973-10-13</td>\n",
-       "      <td>Portugal</td>\n",
-       "      <td>Bulgaria</td>\n",
+       "      <th>34985</th>\n",
+       "      <td>2013-06-07</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>Serbia</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>FIFA World Cup qualification</td>\n",
-       "      <td>Lisbon</td>\n",
-       "      <td>Portugal</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>Belgium</td>\n",
        "      <td>False</td>\n",
-       "      <td>DRAW</td>\n",
-       "      <td>DRAW</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>Serbia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11347</th>\n",
-       "      <td>1980-10-04</td>\n",
-       "      <td>Luxembourg</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Friendly</td>\n",
-       "      <td>Luxembourg</td>\n",
-       "      <td>Luxembourg</td>\n",
-       "      <td>False</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Luxembourg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34436</th>\n",
-       "      <td>2012-10-21</td>\n",
-       "      <td>St. Lucia</td>\n",
-       "      <td>Curaçao</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>CFU Caribbean Cup qualification</td>\n",
-       "      <td>Gros Islet</td>\n",
-       "      <td>St. Lucia</td>\n",
-       "      <td>False</td>\n",
-       "      <td>St. Lucia</td>\n",
-       "      <td>Curaçao</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32710</th>\n",
-       "      <td>2011-03-25</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Czech Republic</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>UEFA Euro qualification</td>\n",
-       "      <td>Granada</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Czech Republic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18590</th>\n",
-       "      <td>1995-01-08</td>\n",
-       "      <td>Congo DR</td>\n",
-       "      <td>Lesotho</td>\n",
+       "      <th>2561</th>\n",
+       "      <td>1946-06-23</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>Sweden</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Friendly</td>\n",
+       "      <td>Copenhagen</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>Sweden</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11594</th>\n",
+       "      <td>1981-03-25</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>Wales</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FIFA World Cup qualification</td>\n",
+       "      <td>Ankara</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Wales</td>\n",
+       "      <td>Turkey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15301</th>\n",
+       "      <td>1989-03-19</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>Costa Rica</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FIFA World Cup qualification</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>Costa Rica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36266</th>\n",
+       "      <td>2014-10-15</td>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>Botswana</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>African Cup of Nations qualification</td>\n",
-       "      <td>Kinshasa</td>\n",
-       "      <td>Zaïre</td>\n",
+       "      <td>Cairo</td>\n",
+       "      <td>Egypt</td>\n",
        "      <td>False</td>\n",
-       "      <td>Congo DR</td>\n",
-       "      <td>Lesotho</td>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>Botswana</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             date   home_team       away_team  home_score  away_score  \\\n",
-       "8703   1973-10-13    Portugal        Bulgaria           2           2   \n",
-       "11347  1980-10-04  Luxembourg             USA           0           2   \n",
-       "34436  2012-10-21   St. Lucia         Curaçao           5           1   \n",
-       "32710  2011-03-25       Spain  Czech Republic           2           1   \n",
-       "18590  1995-01-08    Congo DR         Lesotho           3           0   \n",
+       "             date  home_team   away_team  home_score  away_score  \\\n",
+       "34985  2013-06-07    Belgium      Serbia           2           1   \n",
+       "2561   1946-06-23    Denmark      Sweden           3           1   \n",
+       "11594  1981-03-25     Turkey       Wales           0           1   \n",
+       "15301  1989-03-19  Guatemala  Costa Rica           1           0   \n",
+       "36266  2014-10-15      Egypt    Botswana           2           0   \n",
        "\n",
-       "                                 tournament        city     country  neutral  \\\n",
-       "8703           FIFA World Cup qualification      Lisbon    Portugal    False   \n",
-       "11347                              Friendly  Luxembourg  Luxembourg    False   \n",
-       "34436       CFU Caribbean Cup qualification  Gros Islet   St. Lucia    False   \n",
-       "32710               UEFA Euro qualification     Granada       Spain    False   \n",
-       "18590  African Cup of Nations qualification    Kinshasa       Zaïre    False   \n",
+       "                                 tournament        city    country  neutral  \\\n",
+       "34985          FIFA World Cup qualification    Brussels    Belgium    False   \n",
+       "2561                               Friendly  Copenhagen    Denmark    False   \n",
+       "11594          FIFA World Cup qualification      Ankara     Turkey    False   \n",
+       "15301          FIFA World Cup qualification   Guatemala  Guatemala    False   \n",
+       "36266  African Cup of Nations qualification       Cairo      Egypt    False   \n",
        "\n",
-       "          winner           loser  \n",
-       "8703        DRAW            DRAW  \n",
-       "11347        USA      Luxembourg  \n",
-       "34436  St. Lucia         Curaçao  \n",
-       "32710      Spain  Czech Republic  \n",
-       "18590   Congo DR         Lesotho  "
+       "          winner       loser  \n",
+       "34985    Belgium      Serbia  \n",
+       "2561     Denmark      Sweden  \n",
+       "11594      Wales      Turkey  \n",
+       "15301  Guatemala  Costa Rica  \n",
+       "36266      Egypt    Botswana  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "Name: winner, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "Name: loser, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,9 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top scoring teams\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -617,7 +624,7 @@
        "dtype: int32"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,6 +634,39 @@
     "for col in goals.index:\n",
     "    goals[col] = df[df.home_team == col].home_score.sum() + df[df.away_team == col].away_score.sum()\n",
     "goals = goals.fillna(0).sort_values(ascending=False)\n",
+    "print(\"Top scoring teams\")\n",
+    "\n",
+    "goals.head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Two Sicilies     2\n",
+       "Raetia           4\n",
+       "Matabeleland     5\n",
+       "Barawa           7\n",
+       "Crimea           7\n",
+       "Gozo             7\n",
+       "Romani people    7\n",
+       "Kabylia          8\n",
+       "Micronesia FS    8\n",
+       "Felvidék         8\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goals = goals.fillna(0).sort_values(ascending=True)\n",
     "goals.head(10)\n"
    ]
   },
