--- a/FIFA_bestbyage1.ipynb
+++ b/FIFA_bestbyage1.ipynb
@@ -10,8 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sn\n",
-    "import os\n",
-    "\n"
+    "import os\n"
    ]
   },
   {
